implemented data loading in the service class and wrote unit tests for new methods added.